[package]
name = "nuki"
version = "0.1.0"
authors = [
    "Serhii Plyhun <snuk188@gmail.com>",
    "Varphone Wong <varphone@qq.com>",
]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "Rust wrapper for Nuklear 2D GUI library (https://github.com/Immediate-Mode-UI/Nuklear)"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/varphone/nuki-rs.git"
homepage = "https://github.com/varphone/nuki-rs"
edition = "2018"

[dependencies]
log = "0.4"

[features]
default = []

[dependencies.nuki-sys]
path = "nuki-sys"
version = "4.1"
