[package]
name = "nuki"
version = "0.3.2"
authors = [
    "Serhii Plyhun <snuk188@gmail.com>",
    "Varphone Wong <varphone@qq.com>",
]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "Rust wrapper for Nuklear 2D GUI library (https://github.com/Immediate-Mode-UI/Nuklear)"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/vaxpl/nuki-rs.git"
homepage = "https://github.com/vaxpl/nuki-rs"
edition = "2018"

[dependencies]
chrono = "0.4"
input-device = { version = "0.2", optional = true }
log = "0.4"
nuki-sys = "4.3"

[features]
default = []
