[package]
name = "nuki-sys"
#version = "4.01.5" #version of nuklear.h
version = "4.1.5"
authors = [
    "Serhii Plyhun <snuk188@gmail.com>",
    "Varphone Wong <varphone@qq.com>"
]
description = "Raw bindings to Nuklear 2D GUI library"
homepage = "https://github.com/varphone/nuklear-rs"
repository = "https://github.com/varphone/nuklear-rs"
license = "MIT OR Apache-2.0"
build = "build.rs"
links = "nuklear"

[dependencies]
libc = "~0.2"

[build-dependencies]
cc = "~1.0"